--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
     <h2>WEB</h2>
     <img src="coding.jpg" width="350px">
+    <p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/7T7r_oSp0SE?si=KDtdMDCqgBdKntDU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </p>
     <p>hihi hello. <strong>This is <u>the first page example.</u></strong> I am going to fill this page up with <a href="https://www.w3.org/TR/2011/WD-html5-20110405/" target="_blank" title="html5 specification">infinite information.</a></p>
     <p>Web browsers receive HTML documents from a web server or from local storage and render them into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.</p> <p>HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects, such as interactive forms, may be embedded into the rendered page. It provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets.</p>
 </body>
